# rust-sync-async-test-cases

./: .gitmodules  Cargo.toml  Embed.toml  README.md  build.rs  cargo-embed.gdb  memory.x  rust-toolchain.toml  storage.x
.cargo/: config.toml
contrib/async-output-pin/: Cargo.toml
contrib/async-output-pin/src/: lib.rs
contrib/ccs811-async/: Cargo.toml  README.md
contrib/ccs811-async/src/: app_mode.rs  boot_mode.rs  common_impl.rs  lib.rs  register_access.rs  types.rs
contrib/embassy/examples/stm32l4/.cargo/: config.toml
contrib/lis3dh/: Cargo.toml  README.md
contrib/lis3dh/.cargo/: config
contrib/lis3dh/examples/: ai2c.rs  aspi.rs  cpx.rs  data_ready.rs  i2c.rs  spi.rs
contrib/lis3dh/src/: asynci2c.rs  asyncspi.rs  i2c.rs  lib.rs  register.rs  spi.rs
src/: lib.rs  ram_persisted.rs  test_case_common.rs  test_case_common_async.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
