[package]
authors = ["Henk Dieter Oordt <hd@oordt.dev>", "Folkert de Vries <folkert@tweedegolf.com>"]
name = "sleepy-test-case"
edition = "2018"
version = "0.1.0"

[workspace]
resolver = "2"

members = [
    "testsuite",
    "contrib/embassy/embassy",
    "contrib/embassy/embassy-traits",
    "contrib/embassy/embassy-macros",
    "contrib/embassy/embassy-extras",

    # Uncomment ONLY ONE of the groups below.
    "contrib/lis3dh",
    "contrib/ccs811-async",

    # nRF
    "contrib/embassy/embassy-nrf",
    "contrib/embassy/examples/nrf",

    # stm32
    #"embassy-stm32",
    #"stm32-metapac",
    # uncomment ONLY ONE example crate.
    #"examples/stm32f4",
    #"examples/stm32h7",
    #"examples/stm32l0",
    #"examples/stm32wb55",

    # rp2040
    #"embassy-rp",
    #"examples/rp",

    # std
    #"embassy-std",
    #"examples/std",
]


[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
defmt = "0.2.0"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
nrf52840-hal = "0.12.2"
panic-halt = "0.2.0"
embassy-nrf = { path = "contrib/embassy/embassy-nrf", features = ["nrf52840"] }
embassy = { path = "contrib/embassy/embassy" }
ccs811-async = { version = "0.2.0", path = "contrib/ccs811-async", features = ["defmt"] }
lis3dh = { path = "contrib/lis3dh" }

sha-1 = { version = "0.9.6", features = [], default-features = false } 
nb = "1.0.0"
futures = { version = "0.3.8", default-features = false, features = ["async-await"] }

[features]
# set logging levels here
default = [
  "defmt-default",
  # "dependency-a/defmt-trace",
]

# do NOT modify these features
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
