[package]
name = "async-output-pin"
version = "0.1.0"
authors = ["Folkert <folkert@folkertdev.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["defmt", "defmt-trace", "nrf52840"] }
async-mvar = { version = "0.1.0", path = "../async-mvar" }
embedded-hal = "0.2.4"
