[package]
name = "ccs811-async"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/embedded-ccs811-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the CCS811 ultra-low power digital gas sensor for monitoring indoor air quality."
readme = "README.md"
keywords = ["gas", "air", "quality", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/embedded-ccs811-rs"
documentation = "https://docs.rs/embedded-ccs811"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[features]
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


[dependencies]
embedded-hal = "0.2"
nb = "1"
embassy-traits = { version = "0.1.0", path = "../embassy/embassy-traits", features = ["defmt"] }
embassy = { version = "0.1.0", path = "../embassy/embassy", features = ["defmt"] }

defmt = { version = "0.2.0", optional = true }


[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true

