[package]
name = "lis3dh"
description = "An embedded-hal driver for the LIS3DH accelerometer that implements the generic accelerometer trait"
version = "0.3.0"
license = "Apache-2.0 OR MIT"
authors = [
    "Benjamin Bergman <ben@benbergman.ca>",
    "Paul Sajna <sajattack@gmail.com>",
    "Jesse Braham <jesse@beta7.io>",
]
keywords = [
    "embedded-hal-driver",
    "accelerometer",
]
repository = "https://github.com/BenBergman/lis3dh-rs"
edition = "2018"

[dependencies]
accelerometer = "0.12.0"
embedded-hal = "0.2.4"
num_enum = { version = "0.5.1", default-features = false }

defmt = "0.2.0"
defmt-rtt = "0.2.0"

embassy = { version = "0.1.0", path = "../embassy/embassy", features = ["defmt", "defmt-trace"], optional = true }
embassy-traits = { version = "0.1.0", path = "../embassy/embassy-traits", features = ["defmt"], optional = true }
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["defmt", "defmt-trace", "nrf52840"], optional = true }
futures = { version = "0.3.8", default-features = false, features = ["async-await"], optional = true }
async-output-pin = { version = "0.1.0", path = "../async-output-pin", optional = true }

[dev-dependencies]
# circuit_playground_express = { version = "~0.7", features = ["use_semihosting"] }
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
nrf52840-hal = "0.12.1"


[features]
default = [
  "defmt-default", 
]

async = [
  "embassy",
  "embassy-traits",
  "embassy-nrf",
  "futures",
  "async-output-pin"
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
